--- a/.github/workflows/update-rules.yml
+++ b/.github/workflows/update-rules.yml
@@ -8,11 +8,14 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 显式声明写入权限
     
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}  # 使用内置的 GITHUB_TOKEN
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -35,8 +38,10 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         
     - name: Commit and push if changed
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git add data/rules/
         timestamp=$(date '+%Y-%m-%d %H:%M:%S')
         git commit -m "chore: update rules - ${timestamp}" || exit 0
-        git push 
+        git push origin HEAD:main 
