--- a/.github/workflows/update-rules.yml
+++ b/.github/workflows/update-rules.yml
@@ -15,14 +15,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        ref: rules  # 检出 rules 分支
-        token: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Create rules branch if not exists
-      run: |
-        git fetch origin
-        git checkout rules 2>/dev/null || git checkout -b rules
-        git reset --hard origin/rules 2>/dev/null || true
+        token: ${{ secrets.GITHUB_TOKEN }}  # 使用内置的 GITHUB_TOKEN
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -33,12 +26,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests pytz
-        
-    - name: Copy scripts from main
-      run: |
-        git fetch origin main
-        git checkout origin/main -- data/python/
-        git checkout origin/main -- data/mod/
         
     - name: Update rules
       run: |
@@ -58,4 +45,5 @@ jobs:
         git add data/rules/
         timestamp=$(date '+%Y-%m-%d %H:%M:%S')
         git commit -m "chore: update rules - ${timestamp}（北京时间）" || exit 0
-        git push origin rules 
+        git pull --rebase origin main  # 先拉取并变基
+        git push --force-with-lease origin HEAD:main  # 使用安全的强制推送 
