docs: add README and others
add README and others

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+.venv/
+venv/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+
+# Project specific
 tmp/
 *.log
+data/rules/
