--- a/.github/workflows/update-rules.yml
+++ b/.github/workflows/update-rules.yml
@@ -47,3 +47,12 @@ jobs:
         git commit -m "chore: update rules - ${timestamp}（北京时间）" || exit 0
         git pull --rebase origin main  # 先拉取并变基
         git push --force-with-lease origin HEAD:main  # 使用安全的强制推送 
+
+    # 清理旧的工作流运行记录
+    - name: Delete Workflow Runs
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 1            # 保留最近1天的记录
+        keep_minimum_runs: 3      # 至少保留1次运行记录
